--- a/CasualSorry.html
+++ b/CasualSorry.html
@@ -131,7 +131,7 @@ body {
     <img src="ModH.png" class="character">
 
     <div class="dialogue-box">
-        <img src="DBox.png">
+        <img src="ButtonD.png">
     </div>
 
     <div class="dialogue-text" id="dialogueText"></div>
