--- a/CasualVictory.html
+++ b/CasualVictory.html
@@ -67,7 +67,7 @@ body {
 <div class="victory-text">LOVER ACQUIRED</div>
 
 <div class="victory-img">
-    <img src="SpamH.png" alt="Victory Image">
+    <img src="ModHeart.png" alt="Victory Image">
 </div>
 
 <button id="playAgainBtn">Play Again?</button>
