--- a/CasualBreak.html
+++ b/CasualBreak.html
@@ -87,8 +87,8 @@ body {
 <script>
 const dialogue = [
     "You: Hey— maybe we should slow down for a second.",
-    "???: ...Yeah. You're right.",
-    "???: I think we both needed a breather.",
+    "Modulae Morse: ...Yeah. You're right, also my name id Modulae.",
+    "Modulae Morse: I think we both needed a breather.",
     "You: Let's just reset and take it from here."
 ];
 
